@@ -51,34 +51,6 @@ from conary.conaryclient import cmdline
 
 sys.excepthook = util.genExcepthook(debug=True)
 
-def usage(rc = 1):
-    print "usage: conary changeset <pkg>[=[<oldver>--]<newver>]+ <outfile>"
-    print "       conary commit       <changeset>"
-    print "       conary config"
-    print "       conary emerge       <troveName>+"
-    print "       conary erase        <pkgname>[=<version>][[flavor]]+"
-    print "       conary localcs      <pkgname>[=<version>][[flavor]] <outfile>"
-    print "       conary localcommit  <changeset>"
-    print "       conary migrate      <pkgname>[=<version>][[flavor]]* <changeset>*"
-    print "       conary pin          <pkgname>[=<version>][[flavor]]*"
-    print "       conary query        <pkgname>[=<version>][[flavor]]*"
-    print "       conary remove       <path>+"
-    print "       conary repquery     <pkgname>[=<version>][[flavor]]*"
-    print "       conary rblist"
-    print "       conary rollback     <rollback>"
-    print "       conary showcs       <changeset> <trove>[=<version>]*"
-    print "       conary sync         <pkgname>[=<version>][[flavor]]*"
-    print "       conary unpin        <pkgname>[=<version>][[flavor]]*"
-    print "       conary update       <pkgname>[=<version>][[flavor]]* <changeset>*"
-    print "       conary updateall"
-    print "       conary updateconary"
-    print "       conary usage"
-    print "       conary verify       <pkgname>[=<version>][[flavor]]*"
-    print "       conary --version"
-    print ""
-    print "type 'conary <command> --help' for command-specific usage"
-    return rc
-
 def openDatabase(root, path):
     return database.Database(root, path)
 
@@ -92,6 +64,7 @@ def _register(cmd):
 class ConaryCommand(command.ConaryCommand):
     paramHelp = ''
     defaultGroup = 'Common Options'
+    commandGroup = 'Miscellaneous Commands'
 
     docs = {'build-label'        : ('Use build label LABEL as default search'
                                     ' loc', 'LABEL'),
@@ -150,7 +123,8 @@ class ChangeSetCommand(ConaryCommand):
 <pkg>[=[<oldver>--]<newver>]+ <outfile>
 
 Creates a changeset with the specified troves and stores it in <outfile>'''
-
+    help = 'Request a changeset from one or more Conary repositories'
+    commandGroup = 'Repository Access'
     docs = {'no-recurse' : "Don't include child troves in changeset"}
 
     def addParameters(self, argDef):
@@ -183,9 +157,11 @@ _register(ChangeSetCommand)
 
 class ConfigCommand(ConaryCommand):
     commands = ['config']
-
     docs = {'show-contexts'  : 'display contexts as well as current config',
             'show-passwords' : 'do not mask passwords'}
+    help = 'Display the current configuration'
+    commandGroup = 'Information Display'
+
 
     def addParameters(self, argDef):
         ConaryCommand.addParameters(self, argDef)
@@ -213,8 +189,9 @@ _register(ConfigCommand)
 class CommitCommand(ConaryCommand):
     commands = ['commit']
     paramHelp = "<changeset>"
-
+    help = 'Commit a changeset to a Conary repository'
     docs = {'target-branch' : ('commit to branch BRANCH', 'BRANCH')}
+    commandGroup = 'Repository Access'
 
     def addParameters(self, argDef):
         ConaryCommand.addParameters(self, argDef)
@@ -233,6 +210,8 @@ _register(CommitCommand)
 class EmergeCommand(ConaryCommand):
     commands = ['emerge']
     paramHelp = "<troveName>+"
+    help = 'Build software from source and install it on the system'
+    commandGroup = 'System Modification'
 
     docs = {'no-deps' : 'Do not check to see if buildreqs are installed' }
 
@@ -297,6 +276,8 @@ _register(EmergeCommand)
 class LocalChangeSetCommand(ConaryCommand):
     commands = ['localcs']
     paramHelp = "<pkgname>[=<version>][[flavor]] <outfile>"
+    help = 'Create a changeset that represents local changes'
+    hidden = True
 
     def runCommand(self, cfg, argSet, otherArgs):
         if len(otherArgs) != 4 and len(otherArgs) != 4:
@@ -313,7 +294,9 @@ _register(LocalChangeSetCommand)
 class LocalCommitCommand(ConaryCommand):
     commands = ['localcommit']
     paramHelp = "<changeset>"
-
+    help = 'Apply a changeset generated by localcs to the system'
+    commandGroup = 'System Modification'
+    hidden = True
     def runCommand(self, cfg, argSet, otherArgs):
         if len(otherArgs) < 3: return self.usage()
         db = database.Database(cfg.root, cfg.dbPath)
@@ -322,19 +305,31 @@ class LocalCommitCommand(ConaryCommand):
 _register(LocalCommitCommand)
 
 
-class PinCommand(ConaryCommand):
+class PinUnpinCommand(ConaryCommand):
     commands = ['pin', 'unpin']
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
-
+    hidden = True
+    commandGroup = 'System Modification'
     def runCommand(self, cfg, argSet, otherArgs):
         if argSet: return self.usage()
         updatecmd.changePins(cfg, otherArgs[2:], pin = otherArgs[1] == "pin")
+
+class PinCommand(PinUnpinCommand):
+    commands = ['pin']
+    help = 'Pin software on the system'
 _register(PinCommand)
 
+class UnPinCommand(PinUnpinCommand):
+    commands = ['unpin']
+    help = 'Unpin software on the system'
+_register(UnPinCommand)
 
 class RemoveCommand(ConaryCommand):
     commands = ['remove', 'rm']
     paramHelp = "<path>+"
+    help = 'Remove a file the system and Conary control'
+    commandGroup = 'System Modification'
+    hidden = True
 
     def runCommand(self, cfg, argSet, otherArgs):
         if len(otherArgs) < 3: return self.usage()
@@ -398,7 +393,8 @@ _register(RemoveCommand)
 
 class ListRollbackCommand(ConaryCommand):
     commands = ['rblist']
-
+    commandGroup = 'Information Display'
+    help = 'List the rollbacks available in the rollback stack'
     def runCommand(self, cfg, argSet, otherArgs):
         if argSet or len(otherArgs) > 2: return self.usage()
         db = openDatabase(cfg.root, cfg.dbPath)
@@ -408,6 +404,8 @@ _register(ListRollbackCommand)
 class RollbackCommand(ConaryCommand):
     commands = ['rollback']
     paramHelp = "<rollback>"
+    help = 'Roll back operations stored in the rollback stack'
+    commandGroup = 'System Modification'
 
     docs = {'replace-files' : ('replace files on system with files from'
                                ' rollback if conflict'),
@@ -503,8 +501,9 @@ class QueryCommand(_AbstractQueryCommand):
 
     commands = [ 'query', 'q' ]
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
-
+    help = 'Query the local system database'
     docs = {'all-troves' : 'Display troves that are not installed'}
+    commandGroup = 'Information Display'
 
     def addParameters(self, argDef):
         _AbstractQueryCommand.addParameters(self, argDef)
@@ -551,7 +550,8 @@ class RepQueryCommand(_AbstractQueryCommand):
 
     commands = [ 'repquery', 'rq' ]
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
-
+    help = 'Query one or more Conary repositories'
+    commandGroup = 'Information Display'
     docs = { 'affinity'    : ('Use branch and flavor affinity when searching'
                              ' for troves (behave like conary update)'),
             'all-troves'   : 'Display byDefault False troves',
@@ -645,7 +645,8 @@ class ShowChangesetCommand(_AbstractQueryCommand):
 
     commands = [ "showcs", "scs" ]
     paramHelp = "<changeset> <pkgname>[=<version>][[flavor]]*"
-
+    help = 'Display information about a changeset file'
+    commandGroup = 'Information Display'
     docs = {'all'                : 'combine many common scs flags',
             'all-troves'         : 'display not-by-default troves', 
             'show-changes'       : ('(for relative changeset) display changes'
@@ -701,10 +702,9 @@ class ShowChangesetCommand(_AbstractQueryCommand):
 _register(ShowChangesetCommand)
 
 
-class UpdateCommand(ConaryCommand):
-
-    commands = ["update", "erase" ]
-    paramHelp = "<pkgname>[=<version>][[flavor]]* <changeset>*"
+class _UpdateCommand(ConaryCommand):
+    paramHelp = "[+][-]<pkgname>[=<version>][[flavor]]* <changeset>*"
+    commandGroup = 'System Modification'
 
     docs = {
         'apply-critical'  : 'apply any critical conary updates and then stop',
@@ -815,19 +815,30 @@ class UpdateCommand(ConaryCommand):
             updatecmd.doUpdate(cfg, otherArgs[2:], **kwargs)
         else:
             return self.usage()
+
+class UpdateCommand(_UpdateCommand):
+    commands = [ "update" ]
+    help = 'Update or install software on the system'
 _register(UpdateCommand)
 
-class SyncCommand(UpdateCommand):
 
-    commands = ["sync", "syncchildren"]
+class EraseCommand(_UpdateCommand):
+    commands = [ "erase" ]
+    help = 'Erase software from the system'
+_register(EraseCommand)
+
+
+class SyncCommand(_UpdateCommand):
+    commands = ["syncchildren", "sync"]
     paramHelp = "<pkgname>[=<version>][[flavor]]* <changeset>*"
-
+    help = 'Synchronize software on the system'
+    hidden = True
     docs = {
             'current' : 'syncs child troves to this trove w/o updating <pkgname>',
             'full'    : 'also remove children that are non-default',
            }
     def addParameters(self, argDef):
-        UpdateCommand.addParameters(self, argDef)
+        _UpdateCommand.addParameters(self, argDef)
         sync = argDef.pop('Update Options')
         sync["full"] = NO_PARAM
         sync["current"] = NO_PARAM
@@ -836,13 +847,16 @@ class SyncCommand(UpdateCommand):
 
 _register(SyncCommand)
 
-class MigrateCommand(UpdateCommand):
+
+class MigrateCommand(_UpdateCommand):
 
     commands = ["migrate"]
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
+    help = 'Migrate the system to a different group'
+    hidden = True
 
     def addParameters(self, argDef):
-        UpdateCommand.addParameters(self, argDef)
+        _UpdateCommand.addParameters(self, argDef)
         d = argDef.pop('Update Options')
         del d['from-file']
         del d['keep-existing']
@@ -852,11 +866,12 @@ class MigrateCommand(UpdateCommand):
 _register(MigrateCommand)
 
 
-class UpdateAllCommand(UpdateCommand):
+class UpdateAllCommand(_UpdateCommand):
 
     commands = ['updateall']
     docs = {'items': ('Display troves that conary updateall will update '
                       'to upgrade your system')}
+    help = 'Update all the software on the system'
 
     def addParameters(self, argDef):
         ConaryCommand.addParameters(self, argDef)
@@ -920,7 +935,8 @@ _register(UpdateAllCommand)
 
 class UpdateConaryCommand(ConaryCommand):
     commands = ['updateconary']
-
+    help = 'Attempt to find a rescue version of conary and install it'
+    commandGroup = 'Hidden Commands'
     def runCommand(self, cfg, argSet, otherArgs):
         updatecmd.updateConary(cfg, constants.version)
 _register(UpdateConaryCommand)
@@ -929,8 +945,9 @@ _register(UpdateConaryCommand)
 class VerifyCommand(ConaryCommand):
     commands = ['verify']
     paramHelp = "<pkgname>[=<version>][[flavor]]*"
-
+    help = 'Verify software integrity on the system'
     docs = {'all' : 'verify all troves on system'}
+    commandGroup = 'Information Display'
 
     def addParameters(self, argDef):
         ConaryCommand.addParameters(self, argDef)
@@ -946,6 +963,7 @@ class VerifyCommand(ConaryCommand):
         verify.verify(troves, db, cfg, all=all)
 _register(VerifyCommand)
 
+
 class ConaryMain(options.MainHandler):
     name = 'conary'
     abstractCommand = ConaryCommand
@@ -956,7 +974,10 @@ class ConaryMain(options.MainHandler):
     hobbleShortOpts = True
 
     def usage(self, rc = 1):
-        return usage(rc)
+        print 'Conary Software Configuration Management System'
+        print
+        print 'Common Commands (use "conary help" for the full list)'
+        return options.MainHandler.usage(self, rc)
 
     def runCommand(self, thisCommand, cfg, argSet, args, debugAll=False):
         sys.excepthook = util.genExcepthook(debug=cfg.debugExceptions,
